fix: disable horizontal overflow

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@
   max-width: 25%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 td {
   text-align: center;
 }
